crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_lambda-17.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Lambda {
        params: [],
        body: Block {
            items: [],
            last: None,
        },
    },
)
