crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_lambda-19.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Lambda {
            params: [],
            body: Block {
                items: [
                    GetVar {
                        name: "a",
                    },
                ],
                last: None,
            },
        },
    ),
    [],
)
