crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_lambda-20.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
Lambda {
    params: [],
    body: Block {
        items: [
            GetVar {
                name: "a",
            },
        ],
        last: Some(
            GetVar {
                name: "b",
            },
        ),
    },
}
