crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_lambda-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Lambda(
        Lambda {
            params: [
                "a",
            ],
            body: Block {
                items: [],
                last: Some(
                    GetVar(
                        GetVar {
                            name: "a",
                        },
                    ),
                ),
            },
        },
    ),
)
