crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_lambda-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Lambda(
        Lambda {
            params: [
                "a",
            ],
            body: Block {
                items: [
                    Expr(
                        GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                    ),
                ],
                last: None,
            },
        },
    ),
)
