crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_lambda-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Lambda {
            params: [
                "a",
            ],
            body: Block {
                items: [
                    GetVar {
                        name: "a",
                    },
                ],
                last: Some(
                    GetVar {
                        name: "b",
                    },
                ),
            },
        },
    ),
    [],
)
